# spa

./: .gitignore  LICENSE.md  README.md
cartalyse/: .gitignore  Cargo.toml  README.md
cartalyse/src/: main.rs
dscrypto/: Cargo.toml  README.md
dscrypto/src/: key1.rs  lib.rs  u64.rs
spa/: Cargo.toml  README.md
spa-bin/: Cargo.toml  README.md
spa-bin/src/: main.rs  run.rs
spa-bin/src/debug/: mod.rs
spa-bin/src/run/: gba.rs  mod.rs  nds.rs
spa-bin/src/shaders/: shader.frag.glsl  shader.frag.spv  shader.vert.glsl  shader.vert.spv  shader.wgsl
spa/src/: constants.rs  debug.rs  interrupt.rs  joypad.rs  lib.rs
spa/src/audio/: fifo.rs  mod.rs  resampler.rs
spa/src/audio/gb/: mod.rs  noise.rs  square2.rs  wave.rs
spa/src/common/: bios.rs  bits.rs  colour.rs  debug.rs  dma.rs  framecomms.rs  joypad.rs  membusio.rs  meminterface.rs  mod.rs  resampler.rs  wram.rs
spa/src/common/drawing/: background.rs  colour.rs  mod.rs  palette.rs
spa/src/common/mem/: bios.rs  mod.rs  ram.rs  wram.rs
spa/src/common/peripheral/: mod.rs
spa/src/common/peripheral/timers/: mod.rs
spa/src/common/timers/: mod.rs  timer.rs
spa/src/common/video/: colour.rs  framecomms.rs  mod.rs
spa/src/common/video/drawing/: background.rs  mod.rs  palette.rs
spa/src/common/video/mem/: oam.rs  registers.rs  vram.rs
spa/src/common/videomem/: dispcap.rs  mod.rs  oam.rs  registers.rs  vram.rs
spa/src/ds/: cache.rs  cp15.rs  input.rs  internal.rs  interrupt.rs  ipc.rs  joypad.rs  maths.rs  mod.rs  rtc.rs
spa/src/ds/audio/: capture.rs  mod.rs
spa/src/ds/audio/channel/: adpcm.rs  fifo.rs  mod.rs  noise.rs  psg.rs
spa/src/ds/card/: crypto.rs  header.rs  mod.rs
spa/src/ds/card/save/: eeprom.rs  file.rs  flash.rs  mod.rs
spa/src/ds/memory/: dma.rs  exmem.rs  main.rs  mod.rs  power.rs  shared.rs  wifi.rs
spa/src/ds/spi/: firmware.rs  mod.rs  power.rs  touchscreen.rs
spa/src/ds/video/: constants.rs  mod.rs
spa/src/ds/video/memory/: control.rs  mod.rs  vram.rs
spa/src/ds/video/render/: mod.rs
spa/src/ds/video/video3d/: commandfifo.rs  drawing.rs  interpolate.rs  matrix.rs  mod.rs  render.rs  types.rs
spa/src/ds/video/video3d/drawing/: mod.rs  palette.rs
spa/src/ds/video/video3d/geometry/: clip.rs  lighting.rs  math.rs  matrix.rs  mod.rs
spa/src/ds/video/video3d/render/: mod.rs
spa/src/gba/: constants.rs  debug.rs  input.rs  interrupt.rs  joypad.rs  mod.rs
spa/src/gba/audio/: fifo.rs  mod.rs
spa/src/gba/audio/gb/: mod.rs  noise.rs  square1.rs  square2.rs  wave.rs
spa/src/gba/memory/: bios.rs  dma.rs  framecomms.rs  mod.rs  swi.rs  wram.rs
spa/src/gba/memory/cart/: controller.rs  mod.rs
spa/src/gba/memory/cart/ram/: eeprom.rs  flash.rs  mod.rs  sram.rs
spa/src/gba/memory/swi/: mod.rs  test.rs
spa/src/gba/timers/: mod.rs  timer.rs
spa/src/gba/video/: constants.rs  memory.rs  mod.rs  render.rs
spa/src/gba/video/memory/: oam.rs  palette.rs  registers.rs  vram.rs
spa/src/gba/video/render/: drawing.rs  mod.rs
spa/src/memory/: bios.rs  dma.rs  framecomms.rs  mod.rs  swi.rs  wram.rs
spa/src/memory/cart/: controller.rs  mod.rs  ram.rs
spa/src/memory/cart/ram/: eeprom.rs  flash.rs  mod.rs  sram.rs
spa/src/timers/: mod.rs  timer.rs
spa/src/utils/: bcd.rs  bits.rs  bytes.rs  circbuffer.rs  meminterface.rs  mod.rs
spa/src/video/: background.rs  mod.rs
spa/src/video/memory/: mod.rs  oam.rs  palette.rs  registers.rs  vram.rs
spa/src/video/render/: colour.rs  drawing.rs  mod.rs
