[package]
name = "spa-bin"
version = "0.1.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
chrono = "0.4"
bytemuck = "1.2.0"
futures = "0.3.5"
wgpu = "0.5.0"
winit = "0.22"

[dependencies.spa]
#git = "https://github.com/"
#tag = "0.1.0"
path = "../spa"
#features = ["debug"]

#[profile.release]
#lto = "fat"
#codegen-units=1