[package]
name = "spa-bin"
version = "0.2.1"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
chrono = "0.4"
#bytemuck = "1.2.0"
futures = "0.3.5"
wgpu = "26.0"
winit = "0.30"
cpal = "0.13"
#imgui = "0.8"
#imgui-winit-support = "0.8"
#imgui-wgpu = "0.18"
env_logger = "0.9.0"

[dependencies.spa]
path = "../spa"
features = ["debug", "fast"]

[profile.normal]
inherits = "release"
incremental = true

[profile.fast]
inherits = "release"
lto = "fat"
panic = "abort"
codegen-units = 1
#strip = true